--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-code-push": "^5.3.4",
+    "react-native-fast-image": "^4.0.14",
     "socks": "^2.2.0",
     "uuid": "^3.2.1"
   },
