--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'AwesomeProject' do
   target 'AwesomeProject-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
+    pod 'react-native-fast-image', :path => '../node_modules/react-native-fast-image'
+
   end
 
   target 'AwesomeProjectTests' do
